# quadcopter_autonomy

./: .gitignore  CMakeLists.txt  README.md  colors.txt  colors2.txt  colors3.txt  colors4.txt
ardrone_fly/: CMakeLists.txt  package.xml
ardrone_fly/launch/: ardrone_wiimote_teleop.launch  kalman_ball.launch
ardrone_fly/src/: ballPosFly.cpp  leapFly.cpp  wiiMuxSwitch.cpp  wiimoteFly.cpp
launch/: ardrone_ball_demo.launch  ardrone_hat_leap_demo.launch  ardrone_hoop_demo.launch  ardrone_leap_demo.launch  ardrone_quadmux_demo.launch  ardrone_trimux_demo.launch  ardrone_wii_leap_mux_demo.launch  cmvision_blob_detector.launch  kalman_hoop.launch
src/: ballFollow.cpp  hoopTrickFly.cpp  kalmanBallTrack.cpp  kalmanHoopTrack.cpp  leapFly.cpp
web/: index.html  main.css  main.js
