<package>
  <name>ardrone_fly</name>
  <version>0.0.1</version>
  <description>

     ardrone flight controllers

  </description>
  <author>FRI</author>
  <maintainer email="rmlynch@cs.utexas.edu">Robert Lynch</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>cmvision</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosleap</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>


  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>cmvision</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosleap</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
